[project]
name = "cloud-segmentation"
version = "0.1.0"
description = "Segment clouds from nocturnal sky"
authors = [
    {name = "leoreinmann",email = "leo@reinmann.me"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
